# ms-teams-okdesk-bot

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ec3050411d23_create_tickets_table.py
apis/v1/: base.py  ticket.py
apis/v1/handlers/: card_handlers.py  text_commands.py  welcome.py
apis/v1/routes/: route_teams.py
apis/v1/services/: okdesk_client.py
cards/: adaptive_cards.py  adaptive_factory.py
db/: db.py
models/: ticket.py
schemas/: ticket.py
